--- a/NepslidingTools/app.config
+++ b/NepslidingTools/app.config
@@ -12,7 +12,7 @@
     <add key="ConStringEncrypt" value="false" />
     <!-- 数据库连接字符串,（如果采用加密方式，上面一项要设置为true；加密工具，可在官方下载，
      		如果使用明文这样server=127.0.0.1;database=.....,上面则设置为false。 -->
-    <add key="ConnectionString" value="server=core.neplite.com;database=GLLJ;uid=root;pwd=ydtg520zys;CharSet=utf8" />
+    <add key="ConnectionString" value="server=106.14.135.208;database=GLLJ;uid=root;pwd=ydtg520zys;CharSet=utf8" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
