--- a/NepslidingTools/packages.config
+++ b/NepslidingTools/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net40" />
   <package id="ExcelAbstraction" version="0.0.7" targetFramework="net40" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net40" />
   <package id="NPOI" version="2.3.0" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
