--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -119,6 +119,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="baseconfig.cs" />
     <Compile Include="cccc\cg.cs" />
     <Compile Include="cccc\cpinxinxi.cs" />
     <Compile Include="cccc\danweixinxi.cs" />
