--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -116,6 +116,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="baseconfig.cs" />
     <Compile Include="cccc\cg.cs" />
     <Compile Include="cccc\cpinxinxi.cs" />
     <Compile Include="cccc\danweixinxi.cs" />
@@ -129,6 +130,7 @@
     <Compile Include="cccc\xsddan.cs" />
     <Compile Include="cccc\xx_fapiao.cs" />
     <Compile Include="geli\usermana.cs" />
+    <Compile Include="port.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
