--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -129,6 +129,7 @@
     <Compile Include="cccc\xsdan.cs" />
     <Compile Include="cccc\xsddan.cs" />
     <Compile Include="cccc\xx_fapiao.cs" />
+    <Compile Include="Component.cs" />
     <Compile Include="geli\usermana.cs" />
     <Compile Include="port.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
