--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -142,6 +142,7 @@
     <Compile Include="parts.cs" />
     <Compile Include="test.cs" />
     <Compile Include="username.cs" />
+    <Compile Include="workstation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
