--- a/NepslidingTools/NepslidingTools.csproj
+++ b/NepslidingTools/NepslidingTools.csproj
@@ -490,6 +490,9 @@
       <DependentUpon>WorkPro.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="backup\tsconfig1.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -538,7 +541,7 @@
     <None Include="Resources\exit_72px_1201055_easyicon.net.ico" />
     <None Include="Resources\aaf.png" />
     <None Include="Resources\blue2.png" />
-    <Content Include="mysqldump.exe">
+    <Content Include="tools\mysqldump.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\icon.png" />
@@ -571,6 +574,7 @@
       <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
