--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -131,8 +131,10 @@
     <Compile Include="cccc\xx_fapiao.cs" />
     <Compile Include="Component.cs" />
     <Compile Include="geli\usermana.cs" />
+    <Compile Include="plus\ComponentPlus.cs" />
     <Compile Include="plus\ConfigPuls.cs" />
     <Compile Include="plus\measuresPlus.cs" />
+    <Compile Include="plus\parts.cs" />
     <Compile Include="port.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
