--- a/NepslidingTools/NepslidingTools.csproj
+++ b/NepslidingTools/NepslidingTools.csproj
@@ -376,6 +376,12 @@
     <Compile Include="toolbox\BomFrom.Designer.cs">
       <DependentUpon>BomFrom.cs</DependentUpon>
     </Compile>
+    <Compile Include="toolbox\BomFrom2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="toolbox\BomFrom2.Designer.cs">
+      <DependentUpon>BomFrom2.cs</DependentUpon>
+    </Compile>
     <Compile Include="toolbox\ManagerFrom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -479,6 +485,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="toolbox\BomFrom.resx">
       <DependentUpon>BomFrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="toolbox\BomFrom2.resx">
+      <DependentUpon>BomFrom2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="toolbox\ManagerFrom.resx">
       <DependentUpon>ManagerFrom.cs</DependentUpon>
