--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -153,6 +153,7 @@
     <Compile Include="geli\usermana.cs" />
     <Compile Include="plus\ComponentPlus.cs" />
     <Compile Include="plus\configPlus.cs" />
+    <Compile Include="plus\measuresPlus.cs" />
     <Compile Include="plus\parts.cs" />
     <Compile Include="port.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
