百分之80的bug 。 只剩下最后一个

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -135,6 +135,7 @@
     <Compile Include="plus\ConfigPuls.cs" />
     <Compile Include="plus\measuresPlus.cs" />
     <Compile Include="plus\parts.cs" />
+    <Compile Include="plus\test.cs" />
     <Compile Include="port.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
