--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -155,6 +155,7 @@
     <Compile Include="plus\configPlus.cs" />
     <Compile Include="plus\measuresPlus.cs" />
     <Compile Include="plus\parts.cs" />
+    <Compile Include="plus\test.cs" />
     <Compile Include="port.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
