--- a/NepslidingTools/NepslidingTools.csproj
+++ b/NepslidingTools/NepslidingTools.csproj
@@ -365,6 +365,12 @@
     <Compile Include="testModel\DevSt.Designer.cs">
       <DependentUpon>DevSt.cs</DependentUpon>
     </Compile>
+    <Compile Include="testModel\QrDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="testModel\QrDlg.Designer.cs">
+      <DependentUpon>QrDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="testModel\QueryFrom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -499,6 +505,9 @@
     <EmbeddedResource Include="testModel\DevSt.resx">
       <DependentUpon>DevSt.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="testModel\QrDlg.resx">
+      <DependentUpon>QrDlg.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="testModel\QueryFrom.resx">
       <DependentUpon>QueryFrom.cs</DependentUpon>
     </EmbeddedResource>
@@ -600,6 +609,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="images\2000sg_K.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="images\configimg\logo1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Content Include="images\configimg\bg.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="images\Digimar 27_G_0111.bmp">
@@ -1088,6 +1103,7 @@
     <Content Include="images\µMaxµm_K.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\背景aaa.png" />
     <Content Include="tools\mysqldump.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
